--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Furtur Lading Page</title>
   <link rel="stylesheet" href="scss/styles.css">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
 </head>
+
 <body>
   <div class="container">
-    <div class="menu">
-      <div class="menu_logo"><h1>.Furtur</h1></div>
+    <div class="menu menuopen">
+      <div class="menu_logo">
+        <h1>.Furtur</h1>
+      </div>
       <div class="menu_nav">
         <div class="menu_nav_item, active">Home</div>
         <div class="menu_nav_item">Products</div>
@@ -22,8 +29,10 @@
         <div class="menu_icons_icon"><img src="src/icons/search.svg" alt=""></div>
         <div class="menu_icons_icon"><img src="src/icons/profile.svg" alt=""></div>
         <div class="menu_icons_icon"><img src="src/icons/shop.svg" alt=""></div>
-        <div class="menu_icons_icon"><div class="line"></div></div>
-        <div class="menu_icons_icon"><img src="src/icons/hamburguer.svg" alt=""></div>
+        <div class="menu_icons_icon">
+          <div class="line"></div>
+        </div>
+        <div class="menu_icons_icon "><img class="iconhamburger" src="src/icons/hamburguer.svg" alt=""></div>
       </div>
     </div>
 
@@ -31,10 +40,11 @@
       <div class="hero_info">
         <p class="hero_info_subtitle">Elegant and high quality furniture products</p>
         <h1 class="hero_info_title">The furniture <br> that reflect <br> your style</h1>
+        <!-- <div class="hero_info_line"><img src="/src/icons/linetext.svg" alt=""></div> -->
         <div class="hero_info_btns">
-          <button class="btn-getstarted">Get Started</button>
+          <button onclick="toggleClass()"class="btn-getstarted"> Get Started</button>
           <div class="btn-watchvideo">
-            <div class="iconplay"><img src="src/icons/play.svg" alt=""></div>
+            <div class="iconplay"><i class="fas fa-play"></i></div>
             <p>Watch Video</p>
           </div>
         </div>
@@ -43,17 +53,46 @@
             <h2>148+</h2>
             <p>Furnitures</p>
           </div>
-          <div class="line"></div>
+          <div class="line2"></div>
           <div>
             <h2>100+</h2>
             <p>Clients</p>
           </div>
         </div>
-        
+
       </div>
       <div class="hero_img">
       </div>
     </div>
+
+    <div class="benefits">
+      <h1 class="benefits_title">Benefits Furtur fot you</h1>
+      <div class="benefits_subtitle"><p>Plans, queality, specification, and logistics - all in one space</p></div>
+      <div class="benefits_items">
+        <div class="benefits_items_item">
+          <div class="benefits_items_item_icon"><i class="fas fa-star"></i></div>
+          <h2 class="benefits_items_item_title">Quality Product</h2>
+          <p class="benefits_items_item_paragraph">Furtur pamper our customers to choose quelity materials here all of our furniture products are the best quality</p>
+        </div>
+
+        <div class="benefits_items_item">
+          <div class="benefits_items_item_icon"><i class="fas fa-map-marker-alt"></i></div>
+          <h2 class="benefits_items_item_title">Free & Fast Shipping</h2>
+          <p class="benefits_items_item_paragraph">Every single order ships for free, no minimums, and we deliver the furniture of their choice to their destination</p>
+        </div>
+
+        <div class="benefits_items_item">
+          <div class="benefits_items_item_icon"><i class="fas fa-phone-alt"></i></div>
+          <h2 class="benefits_items_item_title">24/7 Support</h2>
+          <p class="benefits_items_item_paragraph">Furtur provides service all the time to provide a happier and easier customer experience if they experience problems</p>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+  <script src="/app/script.js"></script>
+
 </body>
+
 </html>
