--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container">
-    <div class="menu menuopen">
+    <div class="menu">
       <div class="menu_logo">
         <h1>.Furtur</h1>
       </div>
